Add volume lookup by number
